# wpr2

./: LICENSE  README.md
wpbc_local_planner/: CMakeLists.txt  package.xml  wpbc_local_planner_plugin.xml
wpbc_local_planner/include/wpbc_local_planner/: wl_helper.h  wpbc_local_planner.h
wpbc_local_planner/src/: CLidarAC.cpp  wl_helper.cpp  wpbc_local_planner.cpp
wpr2_behaviors/: CMakeLists.txt  package.xml
wpr2_behaviors/launch/: bottle_2.launch  grab_bottle_test.launch  grab_right_test.launch
wpr2_behaviors/scripts/: test_bottle.py  test_grab_right.py
wpr2_behaviors/src/: wpr2_grab_bottle.cpp  wpr2_grab_bottle_2.cpp  wpr2_grab_object.cpp  wpr2_grab_right.cpp
wpr2_bringup/: CMakeLists.txt  package.xml
wpr2_bringup/config/: wpr2.yaml
wpr2_bringup/include/driver/: SerialCom.h  wpr2_driver.h
wpr2_bringup/launch/: arms_test.launch  base_lidar.launch  base_lidar_camera.launch  calibrate_velocity.launch  femto_test.launch  js_ctrl.launch  lidar_test.launch  motor_test.launch  vel_test.launch
wpr2_bringup/launch/include/: femto_without_pointcloud.launch  lidar_filter.launch  start_femto_bolt.launch
wpr2_bringup/rviz/: plan.rviz  sensor.rviz  urdf.rviz
wpr2_bringup/scripts/: create_udev_rules.sh  delete_udev_rules.sh  install_deps.sh  joints_panel.py  orbbec_femto_bolt_ros1_install.sh  vel_panel.py  wpr2_panel.py
wpr2_bringup/src/: wpr2_arms_test.cpp  wpr2_calibrate_velocity.cpp  wpr2_core.cpp  wpr2_js_vel.cpp  wpr2_lidar_filter.cpp  wpr2_test_motors.cpp
wpr2_bringup/src/driver/: SerialCom.cpp  wpr2_driver.cpp
wpr2_description/: CMakeLists.txt  package.xml
wpr2_description/launch/: gripper.launch  urdf.launch
wpr2_description/meshes/: base.dae  chest.dae  femto_bolt.dae  mecanum_a.dae  mecanum_b.dae
wpr2_description/meshes/arm/: arm_link_1.dae  arm_link_2.dae  arm_link_3.dae  arm_link_4.dae  arm_link_5.dae  arm_link_knuckle.dae  arm_link_palm.dae  arm_link_tip.dae  arm_link_wrist.dae
wpr2_description/urdf/: arm_left.urdf.xacro  arm_left_gripper.urdf.xacro  arm_right.urdf.xacro  arm_right_gripper.urdf.xacro  base_mecanum.urdf.xacro  plan_dual_arms.urdf.xacro  torso.xacro  wpr2.urdf.xacro  wpr2_gripper.urdf.xacro
wpr2_local_planner/: CMakeLists.txt  package.xml  wpr2_local_planner_plugin.xml
wpr2_local_planner/include/wpr2_local_planner/: wpr2_local_planner.h
wpr2_local_planner/src/: wpr2_local_planner.cpp
wpr2_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
wpr2_moveit_config/config/: fake_controllers.yaml  gazebo_wpr2.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml  wpr2.srdf
wpr2_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  real_robot.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml  wpr2_moveit_controller_manager.launch.xml
wpr2_moveit_config/scripts/: get_pose.py  trajectory_to_wpr2.py
wpr2_tutorials/: CMakeLists.txt  package.xml
wpr2_tutorials/launch/: gmapping.launch  hector_mapping.launch  nav.launch  test_nav_arms.launch
wpr2_tutorials/nav_lidar/: costmap_common_params.yaml  local_costmap_params.yaml
wpr2_tutorials/rviz/: nav.rviz
wpr2_tutorials/src/: wpr2_joints_demo.cpp  wpr2_nav_arms.cpp  wpr2_vel_demo.cpp
